--- a/create_model.ipynb
+++ b/create_model.ipynb
@@ -51,7 +51,8 @@
     "from models_jittor import S2MLPv1_deep, S2MLPv1_wide\n",
     "from models_jittor import SwinMLP as SwinMLP_jt\n",
     "from models_jittor import WaveMLP as WaveMLP_jt\n",
-    "from models_jittor import MS_MLP as MS_MLP_jt"
+    "from models_jittor import MS_MLP as MS_MLP_jt\n",
+    "from models_jittor import MorphMLP as MorphMLP_jt"
    ]
   },
   {
@@ -80,6 +81,7 @@
     "from models_pytorch import create_RepMLPNet_B224, create_RepMLPNet_B256\n",
     "from models_pytorch import WaveMLP as WaveMLP_pt\n",
     "from models_pytorch import MS_MLP as MS_MLP_pt\n",
+    "from models_pytorch import MorphMLP as MorphMLP_pt\n",
     "import time"
    ]
   },
@@ -190,7 +192,8 @@
     "# model_jt = SwinMLP_jt()\n",
     "\n",
     "# model_jt = WaveMLP_jt('M')\n",
-    "model_jt = MS_MLP_jt()"
+    "# model_jt = MS_MLP_jt()\n",
+    "model_jt = MorphMLP_jt('B')"
    ]
   },
   {
@@ -257,7 +260,8 @@
     "# model_pt = SwinMLP_pt()\n",
     "\n",
     "# model_pt = WaveMLP_pt('M')\n",
-    "model_pt = MS_MLP_pt()\n",
+    "# model_pt = MS_MLP_pt()\n",
+    "model_pt = MorphMLP_pt('B')\n",
     "\n",
     "# model_pt = ConvMixer_pt(\n",
     "#     dim = 1568,\n",
