Add DynaMixer and Papers

--- a/create_model.ipynb
+++ b/create_model.ipynb
@@ -52,7 +52,8 @@
     "from models_jittor import SwinMLP as SwinMLP_jt\n",
     "from models_jittor import WaveMLP as WaveMLP_jt\n",
     "from models_jittor import MS_MLP as MS_MLP_jt\n",
-    "from models_jittor import MorphMLP as MorphMLP_jt"
+    "from models_jittor import MorphMLP as MorphMLP_jt\n",
+    "from models_jittor import DynaMixer as DynaMixer_jt"
    ]
   },
   {
@@ -82,6 +83,7 @@
     "from models_pytorch import WaveMLP as WaveMLP_pt\n",
     "from models_pytorch import MS_MLP as MS_MLP_pt\n",
     "from models_pytorch import MorphMLP as MorphMLP_pt\n",
+    "from models_pytorch import DynaMixer as DynaMixer_pt\n",
     "import time"
    ]
   },
@@ -193,7 +195,8 @@
     "\n",
     "# model_jt = WaveMLP_jt('M')\n",
     "# model_jt = MS_MLP_jt()\n",
-    "model_jt = MorphMLP_jt('B')"
+    "# model_jt = MorphMLP_jt('B')\n",
+    "model_jt = DynaMixer_jt('M')"
    ]
   },
   {
@@ -261,7 +264,8 @@
     "\n",
     "# model_pt = WaveMLP_pt('M')\n",
     "# model_pt = MS_MLP_pt()\n",
-    "model_pt = MorphMLP_pt('B')\n",
+    "# model_pt = MorphMLP_pt('B')\n",
+    "model_pt = DynaMixer_pt('M')\n",
     "\n",
     "# model_pt = ConvMixer_pt(\n",
     "#     dim = 1568,\n",
